# rangers_hooks

./: .gitignore  Cargo.toml  Taskfile.yml  build.rs  make.toml  makefile  rust-toolchain.toml  test.asm  test1.asm
contrib/: dot_graph.py  find_func_in_call_graph.py  find_func_in_call_graph.txt  inheritance_graph.py  mark_player_info_usage.py  player_mem.txt
contrib/graph1/: graph.json.csv  graph_elem.gml  graph_elem.graphml
docs/: asm.md  asm_ru.md  tasks.md
injector/: Cargo.toml
injector/src/: main.rs  needle.rs
models/: Cargo.toml
models/src/: commands.rs  lib.rs
platform/: Cargo.toml
platform/src/: main.rs  oneshot_handler.rs  serve_handler.rs
proxy_dll/: Cargo.toml
proxy_dll/src/: commands.rs  handler.rs  lib.rs  main.rs  main_thread.rs  player.rs  sigscan.rs  websockets.rs  world_data.rs
src/: dsound.def  dsound_exports.rs  lib.rs  sigscan.rs
