[package]
name = "rangers_hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dsound"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.126"
detour = { version = "0.8.1", default-features = false }
widestring = "1.0.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
]