[package]
name = "proxy_dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proxy_dll"
crate-type = ["cdylib"]

[dependencies]
detour = { version = "0.8.1", default-features = false }
widestring = "1.0.2"
thiserror = "1"
spmc = "0.3.0"
lazy_static = "1.4" 
bincode = "1.3.3"
models = { path = "../models" }
muldiv = "1"
ractor = "0.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-tungstenite = "0.19"
tokio-util = "0.7"

[dependencies.windows]
version = "0.43"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]
